--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          tag_name: "plugin_bins"
           files: |
             target/release/libtest_plugin.dylib
             target/release/libtest_plugin.so
