--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,10 +50,10 @@ jobs:
       - name: Remove Some Cache
         if: matrix.os == 'windows-2019'
         run: |
-          rm -rf target/release/clang
-          rm -rf target/debug/clang
-          rm -rf target/release/gn_ninja_binaries
-          rm -rf target/debug/gn_ninja_binaries
+          rm -recurse target/release/clang
+          rm -recurse target/debug/clang
+          rm -recurse target/release/gn_ninja_binaries
+          rm -recurse target/debug/gn_ninja_binaries
 
       - name: Install python
         uses: actions/setup-python@v1
