--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
           deno-version: 0.x
 
       - name: Test
-        run: deno run -A ./test.ts
+        run: deno test --unstable --allow-write --allow-plugin
