--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,12 @@ jobs:
       matrix:
         os: [macOS-latest, windows-2019, ubuntu-16.04]
 
+    env:
+      GH_ACTIONS: true
+      RUST_BACKTRACE: full
+      DENO_BUILD_MODE: release
+      V8_BINARY: true
+
     steps:
       - name: Clone repository
         uses: actions/checkout@v1
@@ -20,11 +26,6 @@ jobs:
         with:
           rust-version: "1.42.0"
 
-      - name: Environment (common)
-        run: |
-          echo ::set-env name=GH_ACTIONS::1
-          echo ::set-env name=DENO_BUILD_MODE::release
-          echo ::set-env name=RUST_BACKTRACE::full
       - name: Log versions
         run: |
           node -v
