--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         os: [macOS-latest, windows-latest, ubuntu-latest]
 
     env:
-      DENO_VERSION: 0.42.0
+      DENO_VERSION: 1.0.0
       RUST_VERSION: 1.43.0
       RUST_BACKTRACE: full
 
@@ -37,15 +37,10 @@ jobs:
           rustc --version
           cargo --version
 
-      - name: Configure cargo data directory
-        run: echo "::set-env name=CARGO_HOME::$(pwd)/.cargo_home"
-
       - name: Cache
         uses: actions/cache@master
         with:
-          path: |-
-            .cargo_home
-            test_plugin/target
+          path: test_plugin/target
           key: ${{ matrix.os }}-${{ env.DENO_VERSION }}-${{ env.RUST_VERSION }}-${{ hashFiles('test_plugin/Cargo.lock') }}
           restore-keys: |
             ${{ matrix.os }}-${{ env.DENO_VERSION }}-${{ env.RUST_VERSION }}-
